--- a/css/style1.css
+++ b/css/style1.css
@@ -1,38 +1,49 @@
-.modal-dialog.fast-logreg .modal-content {
+div#logRegModal {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
+.fast-logreg .modal-content {
     background: #0e1114;
     border: 1px solid #b986ff;
     border-radius: 10px;
     overflow: hidden;
 }
 .modal-dialog.fast-logreg {
-    min-width: 400px;
+    margin: auto;
+    display: contents;
+}
+.fast-logreg {
+    max-width: 425px;
     margin-inline-start: auto;
     margin-inline-end: auto;
     margin: auto auto;
     overflow: hidden;
     position: relative;
     font-family: 'Poppins';
+    width: 100% !important;
 }
-.modal-dialog.fast-logreg .modal-content {
+.fast-logreg .modal-content {
     height: 77vh;
+    max-width: 425px;
 }
-div#logRegModal {
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-}
-.modal-dialog.fast-logreg .modal-content .form-details {
+.fast-logreg .modal-content .form-details {
     display: flex;
     flex-direction: column;
     height: 100%;
     padding-bottom: 0;
     position: relative;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-footer a {
+.fast-logreg .modal-content .form-details .form-footer a {
     color: #7f7f7f;
     text-decoration: none;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-footer {
+.fast-logreg .modal-content .form-details .form-footer {
     font-size: 14px;
     display: flex;
     justify-content: center;
@@ -43,24 +54,24 @@ div#logRegModal {
     cursor: pointer;
     margin-top: 25px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-content .forget a {
+.fast-logreg .modal-content .form-details .form-content .forget a {
     color: #eaeaea;
     text-decoration: none;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-content.login .forget a:hover {
+.fast-logreg .modal-content .form-details .form-content.login .forget a:hover {
     text-decoration: underline;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-content button.btn.btn-default {
+.fast-logreg .modal-content .form-details .form-content button.btn.btn-default {
     width: 100%;
     background: #b986ff;
     color: #fff;
     margin-top: 10px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details label.form-check-label {
+.fast-logreg .modal-content .form-details label.form-check-label {
     color: #7f7f7f;
     font-size: 13px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header {
+.fast-logreg .modal-content .form-details .form-header {
     flex-shrink: 0;
     display: flex;
     align-items: center;
@@ -69,47 +80,46 @@ div#logRegModal {
     height: 50px;
     z-index: 3;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .buttons {
+.fast-logreg .modal-content .form-details .form-header .buttons {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 10px;
     align-items: center;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn {
-	cursor: pointer;
+.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn {
+	text-decoration: none;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn.register {
+.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn.register {
     background: #b986ff;
     color: #fff;
     border-radius: 5px;
     padding: 5px 10px;
     font-size: 14px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn.login {
+.fast-logreg .modal-content .form-details .form-header .buttons .dyn-btn.login {
     color: #b986ff;
     font-size: 14px;
     border-radius: 5px;
     padding: 5px 10px;
-	display: none;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .logo img {
+.fast-logreg .modal-content .form-details .form-header .logo img {
     max-width: 200px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-header .buttons .close button {
+.fast-logreg .modal-content .form-details .form-header .buttons .close button {
     background: none;
     border: none;
 }
-.modal-dialog.fast-logreg .modal-content .modal-body {
+.fast-logreg .modal-content .modal-body {
     padding: 15px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-content.login {
+.fast-logreg .modal-content .form-details .form-content.login {
     flex: auto;
     height: 1px;
     overflow: hidden;
     position: relative;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements {
+.fast-logreg .modal-content .form-details .form-elements {
     will-change: scroll-position;
     overflow-x: hidden;
     overflow-y: auto;
@@ -121,63 +131,65 @@ div#logRegModal {
     height: 100%;
     flex: auto;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements .inputs {
+.fast-logreg .modal-content .form-details .form-elements .inputs {
     flex: auto;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements a {
+.fast-logreg .modal-content .form-details .form-elements a {
     text-decoration: none;
     color: #7f7f7f;
     font-size: 13px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements h3 {
+.fast-logreg .modal-content .form-details .form-elements h3 {
     color: #fff;
     font-size: 18px;
     margin-top: 10px;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements .inputs .form-floating input {
+.fast-logreg .modal-content .form-details .form-elements .inputs .form-floating input {
     font-size: 14px;
     padding-bottom: 3px;
     padding-top: 16px;
     height: calc(3rem + calc(var(--bs-border-width)* 2));
     min-height: calc(3rem + calc(var(--bs-border-width)* 2));
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements .inputs .form-floating>label {
+.fast-logreg .modal-content .form-details .form-elements .inputs .form-floating>label {
     font-size: 13px;
     padding: 1rem .75rem;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements .inputs input:focus
+.fast-logreg .modal-content .form-details .form-elements .inputs input:focus
 {
     box-shadow: none;
     border: none;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-elements .inputs .form-check-input:checked
+.fast-logreg .modal-content .form-details .form-elements .inputs .form-check-input:checked
 {
     background-color: #b986ff;
     border-color: #b986ff;
 }
-.modal-dialog.fast-logreg .modal-content .form-details .form-content.register
+.fast-logreg .modal-content .form-details .form-content.register
 {
-    display: none;
     flex: auto;
     height: 1px;
     overflow: hidden;
     position: relative;
 }
 @media only screen and (max-width: 768px) {
-	.modal-dialog.fast-logreg .modal-content {
-		height: 100vh;
+	.fast-logreg {
+		max-width: 500px;
+	}
+	.fast-logreg .modal-content {
+		height: 85vh;
 	}
 	div#logRegModal {
 		z-index: 99999;
 	}
 }
-@media only screen and (max-width: 768px) {
-	.modal-dialog.fast-logreg {
-		min-width: inherit;
+@media only screen and (max-width: 425px) {
+	.fast-logreg .modal-content {
+		height: 100vh;
 	}
 }
 @media only screen and (max-width: 320px) {
-	.modal-dialog.fast-logreg .modal-content .form-details .form-header .logo img {
+	.fast-logreg .modal-content .form-details .form-header .logo img {
 		max-width: 150px;
 	}
 }
